src/pd.zig

pub extern const pd_compatibilitylevel: i32;

pub const Int = isize;
pub const Float = f32;
pub const Sample = f32;
pub const FloatUInt = if (Float == f64) u64 else u32;

pub const Method = ?*const fn () void;
pub const NewMethod = ?*const fn () *anyopaque;

pub const Word = extern union {
	float: Float,
	symbol: *Symbol,
	gpointer: *GPointer,
	array: *Array,
	binbuf: *BinBuf,
	index: i32,
};

// ----------------------------------- Atom ------------------------------------
// -----------------------------------------------------------------------------
pub const Atom = extern struct {
	type: u32,
	w: Word,

	extern fn atom_gensym(*const Atom) *Symbol;
	pub const toSymbol = atom_gensym;
	extern fn atom_string(*const Atom, [*]u8, u32) void;
	pub const bufPrint = atom_string;
	extern fn atom_getint(*const Atom) Int;
	pub const int = atom_getint;
	extern fn atom_getfloat(*const Atom) Float;
	pub const float = atom_getfloat;
	extern fn atom_getsymbol(*const Atom) *Symbol;
	pub const symbol = atom_getsymbol;

	extern fn atom_getintarg(u32, u32, *const Atom) Int;
	pub inline fn intArg(self: *const Atom, which: u32, ac: u32) Int {
		return atom_getintarg(which, ac, self);
	}
	extern fn atom_getfloatarg(u32, u32, *const Atom) Float;
	pub inline fn floatArg(self: *const Atom, which: u32, ac: u32) Float {
		return atom_getfloatarg(which, ac, self);
	}
	extern fn atom_getsymbolarg(u32, u32, *const Atom) *Symbol;
	pub inline fn symbolArg(self: *const Atom, which: u32, ac: u32) *Symbol {
		return atom_getsymbolarg(which, ac, self);
	}
};

// variadic functions can't work with enum literals, even if the enum has
// an explicit tag type, so this enum is really just being used as a namespace.
pub const AtomType = enum {
	pub const NULL: u32 = 0;
	pub const FLOAT: u32 = 1;
	pub const SYMBOL: u32 = 2;
	pub const POINTER: u32 = 3;
	pub const SEMI: u32 = 4;
	pub const COMMA: u32 = 5;
	pub const DEFFLOAT: u32 = 6;
	pub const DEFSYM: u32 = 7;
	pub const DEFSYMBOL: u32 = 7;
	pub const DOLLAR: u32 = 8;
	pub const DOLLSYM: u32 = 9;
	pub const GIMME: u32 = 10;
	pub const CANT: u32 = 11;
};


// ---------------------------------- BinBuf -----------------------------------
// -----------------------------------------------------------------------------
pub const BinBuf = opaque {
	extern fn binbuf_free(*BinBuf) void;
	pub const free = binbuf_free;
	extern fn binbuf_duplicate(*const BinBuf) *BinBuf;
	pub const duplicate = binbuf_duplicate;
	extern fn binbuf_text(*BinBuf, [*]const u8, usize) void;
	pub const fromText = binbuf_text;
	extern fn binbuf_gettext(*const BinBuf, *[*]u8, *u32) void;
	pub const text = binbuf_gettext;
	extern fn binbuf_clear(*BinBuf) void;
	pub const clear = binbuf_clear;
	extern fn binbuf_add(*BinBuf, u32, [*]const Atom) void;
	pub const add = binbuf_add;
	extern fn binbuf_addv(*BinBuf, [*]const u8, ...) void;
	pub const addV = binbuf_addv;
	extern fn binbuf_addbinbuf(*BinBuf, *const BinBuf) void;
	pub const addBinBuf = binbuf_addbinbuf;
	extern fn binbuf_addsemi(*BinBuf) void;
	pub const addSemi = binbuf_addsemi;
	extern fn binbuf_restore(*BinBuf, u32, [*]const Atom) void;
	pub const restore = binbuf_restore;
	extern fn binbuf_print(*const BinBuf) void;
	pub const print = binbuf_print;
	extern fn binbuf_getnatom(*const BinBuf) u32;
	pub const nAtoms = binbuf_getnatom;
	extern fn binbuf_getvec(*const BinBuf) [*]Atom;
	pub const vec = binbuf_getvec;
	extern fn binbuf_resize(*BinBuf, u32) u32;
	pub const resize = binbuf_resize;
	extern fn binbuf_eval(*const BinBuf, *Pd, u32, [*]const Atom) void;
	pub const eval = binbuf_eval;
	extern fn binbuf_read(*BinBuf, [*]const u8, [*]const u8, u32) u32;
	pub const read = binbuf_read;
	extern fn binbuf_read_via_canvas(*BinBuf, [*]const u8, *const GList, u32) u32;
	pub const readViaCanvas = binbuf_read_via_canvas;
	extern fn binbuf_read_via_path(*BinBuf, [*]const u8, [*]const u8, u32) u32;
	pub const readViaPath = binbuf_read_via_path;
	extern fn binbuf_write(*const BinBuf, [*]const u8, [*]const u8, u32) u32;
	pub const write = binbuf_write;
};
extern fn binbuf_new() *BinBuf;
pub const binbuf = binbuf_new;


// ----------------------------------- Class -----------------------------------
// -----------------------------------------------------------------------------
pub const MethodEntry = extern struct {
	name: *Symbol,
	fun: GotFn,
	arg: [6]u8,
};

pub const BangMethod = ?*const fn (*Pd) void;
pub const PointerMethod = ?*const fn (*Pd, *GPointer) void;
pub const FloatMethod = ?*const fn (*Pd, Float) void;
pub const SymbolMethod = ?*const fn (*Pd, *Symbol) void;
pub const ListMethod = ?*const fn (*Pd, *Symbol, u32, [*]Atom) void;
pub const AnyMethod = ?*const fn (*Pd, *Symbol, u32, [*]Atom) void;

pub const SaveFn = ?*const fn (*GObj, ?*BinBuf) void;
pub const PropertiesFn = ?*const fn (*GObj, *GList) void;
pub const ClassFreeFn = ?*const fn (*Class) void;

pub const Class = extern struct {
	name: *Symbol,
	helpname: *Symbol,
	externdir: *Symbol,
	size: usize,
	methods: [*]MethodEntry,
	nmethod: u32,
	freemethod: Method,
	bangmethod: BangMethod,
	pointermethod: PointerMethod,
	floatmethod: FloatMethod,
	symbolmethod: SymbolMethod,
	listmethod: ListMethod,
	anymethod: AnyMethod,
	wb: ?*const WidgetBehavior,
	pwb: ?*const ParentWidgetBehavior,
	savefn: SaveFn,
	propertiesfn: PropertiesFn,
	next: *Class,
	floatsignalin: i32,
	flags: u8,
	classfreefn: ClassFreeFn,

	extern fn class_free(*Class) void;
	pub const free = class_free;
	extern fn class_addmethod(*Class, Method, *Symbol, u32, ...) void;
	pub const addMethod = class_addmethod;
	extern fn class_addbang(*Class, Method) void;
	pub const addBang = class_addbang;
	extern fn class_addpointer(*Class, Method) void;
	pub const addPointer = class_addpointer;
	extern fn class_doaddfloat(*Class, Method) void;
	pub const addFloat = class_doaddfloat;
	extern fn class_addsymbol(*Class, Method) void;
	pub const addSymbol = class_addsymbol;
	extern fn class_addlist(*Class, Method) void;
	pub const addList = class_addlist;
	extern fn class_addanything(*Class, Method) void;
	pub const addAnything = class_addanything;
	extern fn class_sethelpsymbol(*Class, *Symbol) void;
	pub const setHelpSymbol = class_sethelpsymbol;
	extern fn class_setwidget(*Class, ?*const WidgetBehavior) void;
	pub const setWidget = class_setwidget;
	extern fn class_setparentwidget(*Class, ?*const ParentWidgetBehavior) void;
	pub const setParentWidget = class_setparentwidget;
	extern fn class_getname(*const Class) [*]const u8;
	pub const name = class_getname;
	extern fn class_gethelpname(*const Class) [*]const u8;
	pub const helpName = class_gethelpname;
	extern fn class_gethelpdir(*const Class) [*]const u8;
	pub const helpDir = class_gethelpdir;
	extern fn class_setdrawcommand(*Class) void;
	pub const setDrawCommand = class_setdrawcommand;
	extern fn class_isdrawcommand(*const Class) i32;
	pub const isDrawCommand = class_isdrawcommand;
	extern fn class_domainsignalin(*Class, i32) void;
	pub const doMainSignalIn = class_domainsignalin;
	extern fn class_setsavefn(*Class, SaveFn) void;
	pub const setSaveFn = class_setsavefn;
	extern fn class_getsavefn(*const Class) SaveFn;
	pub const saveFn = class_getsavefn;
	extern fn class_setpropertiesfn(*Class, PropertiesFn) void;
	pub const setPropertiesFn = class_setpropertiesfn;
	extern fn class_getpropertiesfn(*const Class) PropertiesFn;
	pub const propertiesFn = class_getpropertiesfn;
	extern fn class_setfreefn(*Class, ClassFreeFn) void;
	pub const setFreeFn = class_setfreefn;
	extern fn pd_new(*const Class) ?*Pd;
	pub const new = pd_new;

	extern fn pd_findbyclass(*Symbol, *const Class) ?*Pd;
	pub inline fn find(self: *const Class, sym: *Symbol) ?*Pd {
		return pd_findbyclass(sym, self);
	}

	pub const DEFAULT: u32 = 0;     // flags for new classes below
	pub const PD: u32 = 1;          // non-canvasable (bare) pd such as an inlet
	pub const GOBJ: u32 = 2;        // pd that can belong to a canvas
	pub const PATCHABLE: u32 = 3;   // pd that also can have inlets and outlets
	pub const TYPEMASK: u32 = 3;
	pub const NOINLET: u32 = 8;          // suppress left inlet
	pub const MULTICHANNEL: u32 = 0x10;  // can deal with multichannel signals
	pub const NOPROMOTESIG: u32 = 0x20;  // don't promote scalars to signals
	pub const NOPROMOTELEFT: u32 = 0x40; // not even the main (left) inlet
};
extern fn class_new(?*Symbol, NewMethod, Method, usize, u32, u32, ...) *Class;
pub const class = class_new;
extern fn class_new64(?*Symbol, NewMethod, Method, usize, u32, u32, ...) *Class;
pub const class64 = class_new64;

pub extern const garray_class: *Class;
pub extern const scalar_class: *Class;
pub extern const glob_pdobject: *Class;


// ----------------------------------- Clock -----------------------------------
// -----------------------------------------------------------------------------
pub const Clock = opaque {
	extern fn clock_set(*Clock, f64) void;
	pub const set = clock_set;
	extern fn clock_delay(*Clock, f64) void;
	pub const delay = clock_delay;
	extern fn clock_unset(*Clock) void;
	pub const unset = clock_unset;
	extern fn clock_setunit(*Clock, f64, u32) void;
	pub const setUnit = clock_setunit;
	extern fn clock_free(*Clock) void;
	pub const free = clock_free;
};
extern fn clock_new(*anyopaque, Method) *Clock;
pub const clock = clock_new;
extern fn clock_getlogicaltime() f64;
pub const logicalTime = clock_getlogicaltime;
extern fn clock_getsystime() f64;
pub const sysTime = clock_getsystime;
extern fn clock_gettimesince(f64) f64;
pub const timeSince = clock_gettimesince;
extern fn clock_gettimesincewithunits(f64, f64, u32) f64;
pub const timeSinceWithUnits = clock_gettimesincewithunits;
extern fn clock_getsystimeafter(f64) f64;
pub const sysTimeAfter = clock_getsystimeafter;


// ------------------------------------ Dsp ------------------------------------
// -----------------------------------------------------------------------------
pub const dsp = struct {
	extern fn dsp_add(PerfRoutine, u32, ...) void;
	pub const add = dsp_add;
	extern fn dsp_addv(PerfRoutine, u32, [*]Int) void;
	pub const addV = dsp_addv;
	extern fn dsp_add_plus([*]Sample, [*]Sample, [*]Sample, u32) void;
	pub const addPlus = dsp_add_plus;
	extern fn dsp_add_copy([*]Sample, [*]Sample, u32) void;
	pub const addCopy = dsp_add_copy;
	extern fn dsp_add_scalarcopy([*]Float, [*]Sample, u32) void;
	pub const addScalarCopy = dsp_add_scalarcopy;
	extern fn dsp_add_zero([*]Sample, u32) void;
	pub const addZero = dsp_add_zero;
};


// ---------------------------------- GArray -----------------------------------
// -----------------------------------------------------------------------------
pub const GArray = opaque {
	extern fn garray_getfloatarray(*GArray, *u32, *[*]Float) u32;
	pub const floatArray = garray_getfloatarray;
	extern fn garray_redraw(*GArray) void;
	pub const redraw = garray_redraw;
	extern fn garray_npoints(*GArray) u32;
	pub const nPoints = garray_npoints;
	extern fn garray_vec(*GArray) [*]u8;
	pub const vec = garray_vec;
	extern fn garray_resize(*GArray, Float) void;
	pub const resize = garray_resize;
	extern fn garray_resize_long(*GArray, i64) void;
	pub const resizeLong = garray_resize_long;
	extern fn garray_usedindsp(*GArray) void;
	pub const useInDsp = garray_usedindsp;
	extern fn garray_setsaveit(*GArray, i32) void;
	pub const setSaveIt = garray_setsaveit;
	extern fn garray_getglist(*GArray) *GList;
	pub const glist = garray_getglist;
	extern fn garray_getarray(*GArray) ?*Array;
	pub const array = garray_getarray;

	extern fn garray_getfloatwords(*GArray, *u32, *[*]Word) u32;
	pub fn floatWords(self: *GArray) ?[]Word {
		var len: u32 = undefined;
		var ptr: [*]Word = undefined;
		return if (garray_getfloatwords(self, &len, &ptr) != 0) ptr[0..len] else null;
	}
};

